grabs html elements for use in js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Tip Calculator</h1>
     <div class="tip-output"></div>
-    <input placeholder="enter bill amount . . ." />
+    <input class="billAmount" placeholder="enter bill amount . . ." />
     <button>10% Tip</button>
     <script src="script.js"></script>
   </body>
