--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <h1>Tip Calculator</h1>
     <div class="tip-output"></div>
-    <input class="billAmount" placeholder="enter bill amount . . ." />
-    <button>10% Tip</button>
+    <input class="bill-amount" placeholder="enter bill amount . . ." />
+    <button class="percent-10">10% Tip</button>
     <script src="script.js"></script>
   </body>
 </html>
